--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,13 +10,11 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12">
-      <h2>Mes appareils</h2>
-      <p> Mise à jour : {{lastUpdate | async | date : 'short'| uppercase}}</p>
+      <h2>Posts</h2>
       <ul class="list-group">
-        <app-appareil *ngFor="let appareil of appareils" [appareilName]="appareil.name" [appareilStatus]="appareil.status" ></app-appareil>
+        <app-post *ngFor="let pot of posts" [potTitle]="pot.title" [potLoveIts]="pot.loveIts" [potContent]="pot.content" [potCreateAt]="pot.created_at" ></app-post>
 
       </ul>
-      <button class="btn btn-success" [disabled]="!isAuth" (click)="onAllumer()">Tout allumer</button>
     </div>
   </div>
 </div>
