--- a/src/app/PostListItem/PostListItem.component.html
+++ b/src/app/PostListItem/PostListItem.component.html
@@ -4,7 +4,7 @@
 
   <div>
   <span class="exception1">{{potTitle}}</span>
-  <span class="exception2">{{potCreateAt | date : 'dd/mm/yyyy, hh:mm'| uppercase}}</span>
+  <span class="exception2">{{potCreateAt | date : 'dd/mm/yyyy, hh:mm a'| uppercase}}</span>
    </div>
   <div>
     <p>{{potContent}}</p>
